[tool.poetry]
name = "pysast"
version = "1.1.2-alpha"
description = "SAST Code Scanner in Python"
authors = ["Anshu"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["pysast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = ">=5.0.0"

[tool.poetry.scripts]
pysast = "pysast:run"

[tool.poetry.urls]
homepage = "https://github.com/MatrixEditor/pysast"
api-docs = "https://matrixeditor.github.io/pysast/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
